--- a/index.html
+++ b/index.html
@@ -8,17 +8,21 @@
         <div id="top-bar"></div>
         <div id="ocean">
             <div id="map-container">
-                <img src="./resources/world.svg"/>  
+                <img  id="world-map" src="./resources/world2-cropped.svg"/>  
                 <svg id="usa-svg" width="100%" height="100%" viewbox="0 0 100 100" preserveAspectRatio="none">
                     <polygon id="usa" points="17.6,22.4 16.5,25.2 16,28.6 16.4,32.6 17.1,35 18.3,35.4 19.8,36.7 20.5,36.2 20.7,37.8 21.4,37.8 21.4,39.5 22.8,40.2 23.4,37.9 24.1,37.4 24.8,38.2 25.7,37.4 26.1,39.4 26.2,40.5 27.3,40.7 27.9,39 27.7,36.6 27.9,35.5 29.3,33.8 30,32.2 30.1,30.8 31.1,28.7 31.6,27.3 32.5,26.7 33.1,25.6 33,23.7 32.7,21.5 31.5,21.2 30.7,22.7 29.3,23.7 28.6,24.5 28.6,23.7 28.3,22 26.7,20.7 25.2,20.5 23.1,20.2 20.8,20.2 19,20.2 18,20.2"></polygon>
                     <polygon id="nzl" points=" 91.4,94.6 90.6,93.7 90.9,91.7 91.5,91 92.9,89 94,87.6 94.9,85.5 94.9,83 96,82.5 96.5,85 97,86 97.1,87.4 96.4,88 95.7,89.6 94.4,92 93.2,93.1 92.4,94.1"></polygon>
                     <polygon id="aus" points=" 86.6,92.8 85.9,90.5 85.5,86.3 84.4,84.2 83.1,84.3 81.7,86.1 80.3,86.8 79.4,84.7 79.5,81.8 79.5,77.4 80.1,73.7 81.4,71.9 82.8,69.1 84.8,66.5 86.1,65.1 87.6,65.6 89.2,65.9 90.4,67.3 91.4,71.1 92.3,76.1 92.2,79.8 91.3,83.4 89.8,88 88.1,91.3"></polygon>
                     <polygon id="ind" points=" 71.2,54 70.3,53.5 69.6,50.7 69,47.4 68.7,44.9 67.2,42.5 67.3,39.6 67.8,36.9 68.6,31.3 70.7,30 71.3,32.5 72.3,34.7 73.8,35.4 75,35 75.9,34.9 76.6,36.4 76.4,38.3 75.8,40.2 75.3,43.3 74.9,44.4 74.1,43.6 73.1,46.1 72.4,49.7 71.3,53.5"></polygon>
                     <polygon id="ita" points="53.8,31.4 53.1,32.2 52.1,31.1 51.9,30.1 52.1,29.3 52.7,29.3 52.9,28.7 52.4,28.2 51.9,27.7 51.7,26.9 51.5,26.2 51,26.7 50.7,25.5 50.7,24.1 51.4,23.1 52.1,22.8 52.7,22.8 53.2,23.6 53,24.4 52.9,25.3 53.6,26 54.2,27 54.6,28.4 54.3,30.1 53.9,31.4"></polygon>
-                    <polygon id="tai" points="78.3,55 77.5,54.7 76.8,53.3 76.5,51.5 76.6,49.5 76.5,47.8 75.9,45 76.7,42 77.5,41.7 78,42.4 78,43.4 78.7,43.7 79.2,45.9 79.3,48.3 78.7,48.9 78.4,50.2 77.8,50.6 78.2,51.9 78.9,52.6 78.7,53.9"></polygon>
-                    <polygon id="jap" points="85.3,36 84.5,36 83.9,34.9 83.7,33.9 83.9,33.1 84.5,31.5 85,30.6 85.4,29.5 85.3,28.2 84.8,26.8 84.8,25.2 85.1,23.6 85.8,24.3 87.1,24.9 87.1,26.1 86.8,27.2 87,28.7 87.2,30.2 87.3,31.8 86.9,32.8 86.3,33.6 86,33.9"></polygon>
+                    <polygon id="tha" points="78.3,55 77.5,54.7 76.8,53.3 76.5,51.5 76.6,49.5 76.5,47.8 75.9,45 76.7,42 77.5,41.7 78,42.4 78,43.4 78.7,43.7 79.2,45.9 79.3,48.3 78.7,48.9 78.4,50.2 77.8,50.6 78.2,51.9 78.9,52.6 78.7,53.9"></polygon>
+                    <polygon id="jpn" points="85.3,36 84.5,36 83.9,34.9 83.7,33.9 83.9,33.1 84.5,31.5 85,30.6 85.4,29.5 85.3,28.2 84.8,26.8 84.8,25.2 85.1,23.6 85.8,24.3 87.1,24.9 87.1,26.1 86.8,27.2 87,28.7 87.2,30.2 87.3,31.8 86.9,32.8 86.3,33.6 86,33.9"></polygon>
                     <polygon id="kor" points=" 84.2,32 83.7,33.3 83,33.8 82.6,32.7 82.5,31.5 82.2,30 83.2,29.2 83.7,29.7 83.9,30.8"></polygon>
                 </svg>              
+            </div>
+            <div id="country-block">
+                <img id="flag" src="./resources/missing-flag.svg"/>
+                <div id="country-name"></div>
             </div>
         </div>
         <div id="bottom-bar">
