--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <div id="ocean">
             <div id="map-container">
                 <img  id="world-map" src="./resources/world2-cropped.svg"/>  
-                <svg id="usa-svg" width="100%" height="100%" viewbox="0 0 100 100" preserveAspectRatio="none">
+                <svg id="svg" width="100%" height="100%" viewbox="0 0 100 100" preserveAspectRatio="none">
                     <polygon id="usa" points="17.6,22.4 16.5,25.2 16,28.6 16.4,32.6 17.1,35 18.3,35.4 19.8,36.7 20.5,36.2 20.7,37.8 21.4,37.8 21.4,39.5 22.8,40.2 23.4,37.9 24.1,37.4 24.8,38.2 25.7,37.4 26.1,39.4 26.2,40.5 27.3,40.7 27.9,39 27.7,36.6 27.9,35.5 29.3,33.8 30,32.2 30.1,30.8 31.1,28.7 31.6,27.3 32.5,26.7 33.1,25.6 33,23.7 32.7,21.5 31.5,21.2 30.7,22.7 29.3,23.7 28.6,24.5 28.6,23.7 28.3,22 26.7,20.7 25.2,20.5 23.1,20.2 20.8,20.2 19,20.2 18,20.2"></polygon>
                     <polygon id="nzl" points=" 91.4,94.6 90.6,93.7 90.9,91.7 91.5,91 92.9,89 94,87.6 94.9,85.5 94.9,83 96,82.5 96.5,85 97,86 97.1,87.4 96.4,88 95.7,89.6 94.4,92 93.2,93.1 92.4,94.1"></polygon>
                     <polygon id="aus" points=" 86.6,92.8 85.9,90.5 85.5,86.3 84.4,84.2 83.1,84.3 81.7,86.1 80.3,86.8 79.4,84.7 79.5,81.8 79.5,77.4 80.1,73.7 81.4,71.9 82.8,69.1 84.8,66.5 86.1,65.1 87.6,65.6 89.2,65.9 90.4,67.3 91.4,71.1 92.3,76.1 92.2,79.8 91.3,83.4 89.8,88 88.1,91.3"></polygon>
@@ -22,7 +22,7 @@
             </div>
             <div id="country-block">
                 <img id="flag" src="./resources/missing-flag.svg"/>
-                <div id="country-name"></div>
+                <div id="country-name">Innertext</div>
             </div>
         </div>
         <div id="bottom-bar">
