Added recipe population

--- a/index.html
+++ b/index.html
@@ -35,6 +35,19 @@
                     <div class="recipe-card" id="cookie-pie"><img src="./resources/cookie-pie_tn.png"/><div class="recipe-text-container">Skillet Cookie Pie</div></div>
                 </div>
             </div>
+            <div id="recipe-page">
+                <div id="unitswitch">Switch to Imperial</div>
+                <h1 class="recipe" id="recipe-title">Recipe title</h1>
+                <img class="recipe" id="recipe-image" src=""/>
+                <p class="recipe" id="recipe-about">About this recipe</p>
+                <ul class ="recipe" id="recipe-ingredients">
+                    
+                </ul>
+                <ol class="recipe" id="recipe-instructions">
+
+                </ol>
+                <p class="recipe" id="recipe-notes">Notes</p>
+            </div>
         </div>
     </div>
 
