'0.1' complete. Core features added. Next step will be to stylise and populate with more content.

--- a/index.html
+++ b/index.html
@@ -36,9 +36,13 @@
                 </div>
             </div>
             <div id="recipe-page">
-                <div id="unitswitch">Switch to Imperial</div>
+                <div id="recipe-top-bar">
+                    <div id="unitswitch">Switch to Imperial</div>
+                    <img id="return-button" src="./resources/arrow.png"/>
+                </div>
                 <h1 class="recipe" id="recipe-title">Recipe title</h1>
-                <img class="recipe" id="recipe-image" src=""/>
+                <img id="recipe-picture" src="./resources/sample-photo.png" />
+                <img class="recipe" id="recipe-image" alt="" src=""/>
                 <p class="recipe" id="recipe-about">About this recipe</p>
                 <ul class ="recipe" id="recipe-ingredients">
                     
