--- a/index.html
+++ b/index.html
@@ -6,9 +6,14 @@
 
     <body>
         <div id="pages-container">
-            <div id="page-1-top-bar"></div>
+            <!--<div id="page-1-top-bar"></div>-->
             <div id="ocean">
                 <div id="map-container">
+                    <img class="map-decor" id="map-compass" src="./resources/compass-rose.png"/>
+                    <img class="map-decor" id="wave-1" src="./resources/waves-clipart-wave-700x400.gif" />
+                    <img class="map-decor" id="wave-2" src="./resources/waves-clipart-wave-700x400.gif" />
+                    <img class="map-decor" id="wave-3" src="./resources/waves-clipart-wave-700x400.gif" />
+                    <img class="map-decor" id="wave-4" src="./resources/waves-clipart-wave-700x400.gif" />
                     <img  id="world-map" src="./resources/world2-cropped.svg"/>  
                     <svg id="svg" width="100%" height="100%" viewbox="0 0 100 100" preserveAspectRatio="none">
                         <polygon id="usa" points="17.6,22.4 16.5,25.2 16,28.6 16.4,32.6 17.1,35 18.3,35.4 19.8,36.7 20.5,36.2 20.7,37.8 21.4,37.8 21.4,39.5 22.8,40.2 23.4,37.9 24.1,37.4 24.8,38.2 25.7,37.4 26.1,39.4 26.2,40.5 27.3,40.7 27.9,39 27.7,36.6 27.9,35.5 29.3,33.8 30,32.2 30.1,30.8 31.1,28.7 31.6,27.3 32.5,26.7 33.1,25.6 33,23.7 32.7,21.5 31.5,21.2 30.7,22.7 29.3,23.7 28.6,24.5 28.6,23.7 28.3,22 26.7,20.7 25.2,20.5 23.1,20.2 20.8,20.2 19,20.2 18,20.2"></polygon>
@@ -26,7 +31,7 @@
                     <div id="country-name">Innertext</div>
                 </div>
             </div>
-            <div id="page-1-bottom-bar"></div>
+            <!-- <div id="page-1-bottom-bar"></div> -->
             <div id="page-2-top-bar">
                 <img id="return-button" src="./resources/arrow.png"/>
             </div>
