added and beautified country list.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
         <div id="pages-container">
             <!--<div id="page-1-top-bar"></div>-->
             <div id="ocean">
+                <div id="country-list">
+                    <div id="relative-wrapper">
+                        <div id="country-list-toggle-frame">
+                            <img id="country-list-toggle-button" src="./resources/arrow.png"/>
+                        </div>
+                        <div id="country-list-items-container">
+
+                        </div>
+                    </div>    
+
+                </div>
                 <div id="map-container">
                     <img class="map-decor" id="map-compass" src="./resources/compass-rose.png"/>
                     <img class="map-decor" id="wave-1" src="./resources/waves-clipart-wave-700x400.gif" />
