added internal/external classes for results items. Removed scroll bars

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                 </div>
             </div>
             <div id="results-page">
+                RESULTS
                 <img id="return-button" src="./resources/arrow.png"/>
                 <div id="results-container">
                     <div class="recipe-card" id="cookie-pie"><img src="./resources/cookie-pie_tn.png"/><div class="recipe-text-container">Skillet Cookie Pie</div></div>
