new authors page

--- a/index.html
+++ b/index.html
@@ -90,9 +90,7 @@
                     <img id="recipe-picture" src="./resources/sample-photo.png" />
                     <img class="recipe" id="recipe-image" alt="" src=""/>
                     <h2 class="recipe">About</h2>
-                    <p>
-                        
-                    </p>
+                    <p>Author: <a id="recipe-author"></a></p>
                     <p class="recipe" id="recipe-about"></p>
                     <h2 class="recipe">Ingredients</h2>
                     <div id="unitswitch">
