--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <div id="country-list">
                     <div id="relative-wrapper">
                         <div id="country-list-toggle-frame">
-                            <img id="country-list-toggle-button" src="./resources/arrow.png"/>
+                            <img id="country-list-toggle-button" src="./resources/list-button.png"/>
                         </div>
                         <div id="country-list-items-container">
 
@@ -50,7 +50,7 @@
                 </div>
             </div>
             <div id="results-page">
-                <img id="return-button" src="./resources/arrow.png"/>
+                <img id="return-button" src="./resources/up-button.png"/>
                 <h1 id="results-country-header">RESULTS</h1>
 
                 <div id="menu-container">
@@ -83,7 +83,7 @@
             <div id="recipe-page">
                 <div id="recipe-top-bar">
                     
-                    <img id="return-button" src="./resources/arrow.png"/>
+                    <img id="return-button" src="./resources/up-button.png"/>
                 </div>
                 <div id="recipe-content">
                     <h1 class="recipe" id="recipe-title">Recipe title</h1>
@@ -116,6 +116,6 @@
                 </div>
             </div>
         </div>
-        <script src="./index.js"></script>
+        <script type="module" src="./index.js"></script>
     </body> 
 </hmtl>
