--- a/recipes/recipe.html
+++ b/recipes/recipe.html
@@ -1,18 +1,18 @@
 <hmtl>
-
     <head>
-        <link rel="stylesheet" href ="./index.css"/>
+        <link rel="stylesheet" href ="./recipe.css"/>
     </head>
 
     <body>
-        <div id="recipe-page">
-                <div id="recipe-top-bar">
-                    
-                    <img id="return-button" src="./resources/up-button.png"/>
-                </div>
+        <div id="main">
+            <div id="menu-bar">
+                <img id="back" src="../resources/back-button.png"/>
+                <h1 class="recipe" id="recipe-title">Recipe title</h1>
+                <div id="back"></div>
+            </div>
                 <div id="recipe-content">
-                    <h1 class="recipe" id="recipe-title">Recipe title</h1>
-                    <img id="recipe-picture" src="./resources/sample-photo.png" />
+                    
+                    <img id="recipe-picture" src="../resources/sample-photo.png" />
                     <img class="recipe" id="recipe-image" alt="" src=""/>
                     <h2 class="recipe">About</h2>
                     <p>Author: <a id="recipe-author"></a></p>
@@ -40,7 +40,7 @@
                     </ul>
                 </div>
         </div>
-        <script src="./index.js"></script>
+        <script type="module" src="./recipe.js"></script>
     </body> 
 </hmtl>
 
