Touched up index site. Shrank main page, added some formatting for better screen resolution compatability

--- a/index.html
+++ b/index.html
@@ -50,7 +50,10 @@
                 </div>
             </div>
             <div id="results-page">
-                <img id="return-button" src="./resources/up-button.png"/>
+                <div class="top-bar">
+                    
+                    <img id="return-button" src="./resources/up-button.png"/>
+                </div>
                 <h1 id="results-country-header">RESULTS</h1>
 
                 <div id="menu-container">
@@ -79,9 +82,10 @@
                         </div>
                    </div>
                 </div>
+                <div class="fade"></div>
             </div>
             <div id="recipe-page">
-                <div id="recipe-top-bar">
+                <div class="top-bar">
                     
                     <img id="return-button" src="./resources/up-button.png"/>
                 </div>
@@ -114,6 +118,7 @@
 
                     </ul>
                 </div>
+                <div class="fade"></div>
             </div>
         </div>
         <script type="module" src="./index.js"></script>
