Index and Author page should now have fully usable responsive designs. Recipe page still to do. Will test on phones

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     </ol>
                     <h2 class="recipe">Notes</h2>
                     <ul class="recipe" id="recipe-notes">
-
+                        <li class="note-item">Click <a id="hard-link">here</a> for a permanent link to this recipe.</li>
                     </ul>
                 </div>
                 <div class="fade"></div>
