pseudo-final. Maybe some final touches. Almost entirely satisfied

--- a/recipes/recipe.html
+++ b/recipes/recipe.html
@@ -38,7 +38,9 @@
                     <ul class="recipe" id="recipe-notes">
 
                     </ul>
+                    
                 </div>
+                <div class="fade"></div>
         </div>
         <script type="module" src="./recipe.js"></script>
     </body> 
